style: fix gap menu

--- a/ui/src/components/navbar/navbar.module.css
+++ b/ui/src/components/navbar/navbar.module.css
@@ -17,3 +17,7 @@
 .logo {
   width: 150px;
 }
+
+.menu {
+  gap: 36px;
+}
